--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
               molestias culpa ratione alias! Nostrum minima tempora quibusdam
               debitis architecto iure temporibus vero quis? Magnam, et corporis?
             </p>
-
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
               corporis cupiditate autem eius. In repellat, sequi voluptatem
@@ -61,10 +60,12 @@
             </p>
           </div>
           <div class="content__left">
+            <h3>Lorem</h3>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit.
             Voluptatum, mollitia?
           </div>
           <div class="content__right">
+            <h3>Lorem</h3>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. In ea
             perspiciatis laboriosam ducimus veritatis dolorum aut nostrum,
             mollitia laudantium corrupti ad illum maiores deserunt saepe odit
