--- a/index.html
+++ b/index.html
@@ -41,37 +41,48 @@
         </div>
       </div>
       <div class="container">
-        <div class="content">
-          <div class="content__center">
-            <h2>Lorem</h2>
-            <p>
+        <div class="main">
+          <div class="content">
+            <div class="content__center">
+              <h2>Lorem</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Deserunt, doloremque explicabo. Placeat, odio in exercitationem
+                ad deserunt at fugiat aliquam quaerat doloremque dolores eum
+                dolor voluptatem assumenda voluptates voluptatum quo id dicta
+                explicabo molestias culpa ratione alias! Nostrum minima tempora
+                quibusdam debitis architecto iure temporibus vero quis? Magnam,
+                et corporis?
+              </p>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
+                corporis cupiditate autem eius. In repellat, sequi voluptatem
+                veniam inventore dolor autem numquam ducimus praesentium
+                explicabo ratione eos molestiae deleniti accusantium.
+              </p>
+            </div>
+            <div class="content__left">
+              <h3>Lorem</h3>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-              Deserunt, doloremque explicabo. Placeat, odio in exercitationem ad
-              deserunt at fugiat aliquam quaerat doloremque dolores eum dolor
-              voluptatem assumenda voluptates voluptatum quo id dicta explicabo
-              molestias culpa ratione alias! Nostrum minima tempora quibusdam
-              debitis architecto iure temporibus vero quis? Magnam, et corporis?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt
-              corporis cupiditate autem eius. In repellat, sequi voluptatem
-              veniam inventore dolor autem numquam ducimus praesentium explicabo
-              ratione eos molestiae deleniti accusantium.
-            </p>
+              Voluptatum, mollitia?
+            </div>
+            <div class="content__right">
+              <h3>Lorem</h3>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. In ea
+              perspiciatis laboriosam ducimus veritatis dolorum aut nostrum,
+              mollitia laudantium corrupti ad illum maiores deserunt saepe odit
+              provident quo nesciunt temporibus, consequatur tempora ratione,
+              dignissimos ullam ut? Nisi natus mollitia, exercitationem alias
+              aperiam recusandae, fugiat quod, fugit laboriosam quam ad error!
+            </div>
           </div>
-          <div class="content__left">
-            <h3>Lorem</h3>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-            Voluptatum, mollitia?
-          </div>
-          <div class="content__right">
-            <h3>Lorem</h3>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. In ea
-            perspiciatis laboriosam ducimus veritatis dolorum aut nostrum,
-            mollitia laudantium corrupti ad illum maiores deserunt saepe odit
-            provident quo nesciunt temporibus, consequatur tempora ratione,
-            dignissimos ullam ut? Nisi natus mollitia, exercitationem alias
-            aperiam recusandae, fugiat quod, fugit laboriosam quam ad error!
+          <div class="menu">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
+            nulla sapiente illo, aliquam vitae in atque officiis natus illum
+            amet tempore dicta velit suscipit nam, temporibus ipsam totam
+            cupiditate quaerat repellendus magnam earum neque a officia! Libero
+            tempora accusamus doloremque inventore eum sed in pariatur quaerat
+            quos soluta, consequatur non?
           </div>
         </div>
       </div>
